# TushareMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.scraper  README.md  docker-compose.yml  pyproject.toml  storage_state.json
config/: tushare_rate_limits.json
data/: sell_signals_20260128.csv  sell_signals_qfq_20260128.csv  tushare_api_specs.json
examples/: mcp_config.json
scripts/: capture_storage_state.py
src/tusharemcp/: client.py  config.py  gateway.py  scrape.py  server.py  specs.py
